--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,14 @@
 spring.application.name=Redis-Project
+logging.level.root=info
+spring.datasource.url=jdbc:mysql://localhost:3306/redis_project
+spring.datasource.username=root
+spring.datasource.password=
+spring.jpa.hibernate.ddl-auto=update
+redis.user.details.timeout=10
+spring.jpa.show-sql=true
+spring.redis.host=localhost
+spring.redis.port=6379
+spring.redis.password=
+redis.host=localhost
+redis.port=6379
+redis.password=
